--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </td>
     </tr>
   </table>
-  <h5> <a href="C:\Users\Yusuf Emre\Desktop\GAMZE\Web Development\HTML Personal Site\contact - me.html">
+  <h5> <a href="HTML Personal Site\contact - me.html">
       Contact Me</h5>
 
 </body>
